# Bastet

./: .flags  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  compile_commands.json  flake.nix  runSprt.sh
.cache/clangd/index/: bastet.cpp.8AD9286639C526FB.idx
header/: Engine.hpp  TaskManagement.hpp  UciHandler.hpp
src/: .Engine.cpp.swp  Engine.cpp  TaskManagement.cpp  UciHandler.cpp  bastet.cpp  main.cpp
